// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeView renders a 401 1`] = `
<h1>
  You don't have enough permissions to view this page
</h1>
`;

exports[`TradeView renders a 404 1`] = `
<div
  className="ui negative message"
  data-test-id="errorMessage"
>
  <div
    className="header"
  >
    Something went wrong
  </div>
  <p>
    Trade 123 not Found
  </p>
</div>
`;

exports[`TradeView renders a trade 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  height: 50px;
}

.c1 {
  display: inline-block;
}

<header
    className="c0"
  >
    <h1
      className="c1"
    >
      Trade details
    </h1>
    <div>
      <div
        aria-expanded={false}
        className="ui button floating dropdown primary"
        data-test-id="apply-for-financing"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Apply for financing
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition left"
        >
          <div
            aria-disabled={false}
            className="item"
            data-test-id="action-APPLY_FOR_LC"
            onClick={[Function]}
            role="option"
          >
            <span
              className="text"
            >
              Apply for LC
            </span>
          </div>
          <div
            aria-disabled={false}
            className="item"
            data-test-id="action-APPLY_FOR_SBLC"
            onClick={[Function]}
            role="option"
          >
            <span
              className="text"
            >
              Apply for SBLC
            </span>
          </div>
        </div>
      </div>
    </div>
  </header>,
  .c0 {
  font-style: italic;
}

<p
    className="c0"
  >
    To be financed
  </p>,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 30px 0px 30px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4.c4.c4.c4.c4 .field .selection.dropdown {
  width: 50% !important;
}

.c4.c4.c4.c4.c4 .field.error {
  margin-bottom: 0;
}

.c4.c4.c4.c4.c4 label.inputLabel {
  width: 200px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  margin: -25px;
  padding: 0 0 0 25px;
  display: inline-block;
  width: 100%;
  line-height: 2;
}

@media (min-width:68.75em) {
  .c1 {
    padding-left: 40px;
  }
}

<div
    className="ui basic segment"
  >
    <div
      className="accordion ui fluid"
    >
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "paddingTop": 0,
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Trade data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
            data-test-id="header-text"
          >
            <span
              className="c3"
            >
              Trade source
            </span>
            Vakt
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Buyer
            </span>
            
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Buyer's reference
            </span>
            E222
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Seller
            </span>
            
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Credit requirement
            </span>
            Documentary letter of credit
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Reference date
            </span>
            2018/10/29
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Commodity and price
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Commodity type
            </span>
            BFOET
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Product/Grade
            </span>
            graded
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Invoice quantity
            </span>
            Load
          </li>
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Quantity
              </span>
              600,000 BBL
            </li>
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Min tolerance
            </span>
            1.00%
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Max tolerance
            </span>
            1.00%
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Price
               per
               
              unit
            </span>
            73.14 USD/BBL
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Payment terms
            </span>
            30 calendar days from BL
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Delivery terms
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Delivery from
              </span>
              2020/12/01
            </li>
          </li>
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Delivery to
              </span>
              2020/12/31
            </li>
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Delivery term (incoterm)
            </span>
            FOB
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Delivery location
            </span>
            Weymouth
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Laytime
            </span>
            as per GT&Cs
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Demurrage terms
            </span>
            as per GT&Cs
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Cargo Id
            </span>
            5555aaa5aax
          </li>
          <div>
            <div
              className="accordion ui fluid"
            >
              <div
                style={
                  Object {
                    "border": "1px solid rgba(34,36,38,.15)",
                    "marginBottom": "5px",
                    "padding": "20px",
                  }
                }
              >
                <div
                  className="active title"
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="dropdown icon"
                  />
                  <span
                    className="c5"
                  >
                     Parcel #
                    1
                     
                  </span>
                </div>
                <div
                  className="content active"
                >
                  <ul
                    className="c1"
                  >
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Parcel Id
                      </span>
                      jjjj
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Start date
                      </span>
                      2018/09/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        End date
                      </span>
                      2018/10/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        IMO number
                      </span>
                      1
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Vessel name
                      </span>
                      Andrej
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Deemed BL date
                      </span>
                      2018/10/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        loadingPort
                      </span>
                      Banja luka
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Inspector
                      </span>
                      Kenan
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Quantity
                      </span>
                      3
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Contract data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              General T&Cs
            </span>
            SUKO90
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Contract applicable law
            </span>
            English law
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Documentary requirements
        </div>
      </div>
      <div
        className="content active"
      >
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Bill of lading
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Certificate of origin
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Quality and quantity report
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Certificate of insurance
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TradeView renders a trade with missing data 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  height: 50px;
}

.c1 {
  display: inline-block;
}

<header
    className="c0"
  >
    <h1
      className="c1"
    >
      Trade details
    </h1>
    <div>
      <div
        aria-expanded={false}
        className="ui button floating dropdown primary"
        data-test-id="apply-for-financing"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Apply for financing
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition left"
        >
          <div
            aria-disabled={false}
            className="item"
            data-test-id="action-APPLY_FOR_LC"
            onClick={[Function]}
            role="option"
          >
            <span
              className="text"
            >
              Apply for LC
            </span>
          </div>
          <div
            aria-disabled={false}
            className="item"
            data-test-id="action-APPLY_FOR_SBLC"
            onClick={[Function]}
            role="option"
          >
            <span
              className="text"
            >
              Apply for SBLC
            </span>
          </div>
        </div>
      </div>
    </div>
  </header>,
  .c0 {
  font-style: italic;
}

<p
    className="c0"
  >
    To be financed
  </p>,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 30px 0px 30px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4.c4.c4.c4.c4 .field .selection.dropdown {
  width: 50% !important;
}

.c4.c4.c4.c4.c4 .field.error {
  margin-bottom: 0;
}

.c4.c4.c4.c4.c4 label.inputLabel {
  width: 200px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  margin: -25px;
  padding: 0 0 0 25px;
  display: inline-block;
  width: 100%;
  line-height: 2;
}

@media (min-width:68.75em) {
  .c1 {
    padding-left: 40px;
  }
}

<div
    className="ui basic segment"
  >
    <div
      className="accordion ui fluid"
    >
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "paddingTop": 0,
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Trade data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
            data-test-id="header-text"
          >
            <span
              className="c3"
            >
              Trade source
            </span>
            Vakt
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Buyer
            </span>
            
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Buyer's reference
            </span>
            E1243
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Seller
            </span>
            
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Credit requirement
            </span>
            Documentary letter of credit
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Reference date
            </span>
            2018/10/29
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Commodity and price
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Commodity type
            </span>
            BFOET
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Product/Grade
            </span>
            graded
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Invoice quantity
            </span>
            Load
          </li>
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Quantity
              </span>
              600,000 BBL
            </li>
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Min tolerance
            </span>
            1.00%
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Max tolerance
            </span>
            1.00%
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Price
               per
               
              unit
            </span>
            73.14 USD/BBL
          </li>
          <li
            className="c2"
          >
            <span
              className="c3"
            >
              Payment terms
            </span>
            30 calendar days from BL
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Delivery terms
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Delivery from
              </span>
              2020/12/01
            </li>
          </li>
          <li
            className="c2"
          >
            <li
              className="c4 c2"
            >
              <span
                className="c3"
              >
                Delivery to
              </span>
              2020/12/31
            </li>
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Delivery term (incoterm)
            </span>
            FOB
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Delivery location
            </span>
            Weymouth
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Laytime
            </span>
            as per GT&Cs
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Demurrage terms
            </span>
            as per GT&Cs
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Cargo Id
            </span>
            5555aaa5aax
          </li>
          <div>
            <div
              className="accordion ui fluid"
            >
              <div
                style={
                  Object {
                    "border": "1px solid rgba(34,36,38,.15)",
                    "marginBottom": "5px",
                    "padding": "20px",
                  }
                }
              >
                <div
                  className="active title"
                  onClick={[Function]}
                >
                  <i
                    aria-hidden="true"
                    className="dropdown icon"
                  />
                  <span
                    className="c5"
                  >
                     Parcel #
                    1
                     
                  </span>
                </div>
                <div
                  className="content active"
                >
                  <ul
                    className="c1"
                  >
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Parcel Id
                      </span>
                      jjjj
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Start date
                      </span>
                      2018/09/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        End date
                      </span>
                      2018/10/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        IMO number
                      </span>
                      1
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Vessel name
                      </span>
                      Andrej
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Deemed BL date
                      </span>
                      2018/10/01
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        loadingPort
                      </span>
                      Banja luka
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Inspector
                      </span>
                      Kenan
                    </li>
                    <li
                      className="c4 c2"
                    >
                      <span
                        className="c3"
                      >
                        Quantity
                      </span>
                      3
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Contract data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c1"
        >
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              General T&Cs
            </span>
            SUKO90
          </li>
          <li
            className="c4 c2"
          >
            <span
              className="c3"
            >
              Contract applicable law
            </span>
            English law
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c0"
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
          />
          Documentary requirements
        </div>
      </div>
      <div
        className="content active"
      >
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Bill of lading
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Certificate of origin
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Quality and quantity report
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c3"
            >
              Certificate of insurance
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
